# index.js
@@ -5,6 +5,8 @@ const path = require("path");
 // leer archivo de configuracion
 require("dotenv").config();
 console.log("base", process.env.base);
+console.log("NODE_ENV", process.env.NODE_ENV);
+
 
 require("./base-orm/sqlite-init"); // crear base si no existe
 
@@ -47,6 +49,7 @@ const ecoRouter = require("./routes/eco");
 const seguridadRouter = require("./routes/seguridad");
 const jsonexternoRouter = require("./routes/jsonexterno");
 const equiposRouter = require("./routes/equipos");
+const erroresRouter = require("./routes/errores");
 app.use(articulosfamiliasRouter);
 app.use(articulosfamiliasmockRouter);
 app.use(articulosRouter);
@@ -54,66 +57,27 @@ app.use(ecoRouter);
 app.use(seguridadRouter);
 app.use(jsonexternoRouter);
 app.use(equiposRouter);
-
-// test error sincrono
-app.get("/testerrorsincrono", (req, res, next) => {
-  throw new Error("probando desencadenar un error sincrono");
-});
-
-// test error asincrono1
-app.get("/testerrorasincrono1", async function (req, res, next) {
-  throw new Error("probando desencadenr un error asincrono 1, Server crash!");
-});
-
-// test error asincrono2 (promesas then/catch)
-app.get("/testerrorasincrono2", async function (req, res, next) {
-  (new Promise(function(resolve, reject) {
-    setTimeout(() => reject(new Error("probando desencadenr un error asincrono 2, Server crash!")), 100);
-  })).then(console.log('ok nunca se da')) 
-  // si me olvido el catch, el error hace caer el servidor
-});
-
-// test error asincrono3 (solucion del punto anterior, promesas con async/await)
-app.get("/testerrorasincrono3", async function (req, res, next) {
-  // en las promesas no usar then/catch, si no await y agregar con try/cath si queremos cambiar el error
- 
-  await (new Promise(function(resolve, reject) {
-    setTimeout(() => reject(new Error("probando desencadenr un error asincrono 3, Server No crash!")), 100);
-  }))
-
-  // idem anterior
-  // await Promise.reject(new Error("probando desencadenr un error asincrono 3, Server No crash!"));
-
-});
+app.use(erroresRouter);
 
 
-// manejo de errores
-const fs = require("fs/promises");
-app.use(async function (err, req, res, next) {
-  // logueamos el error en un archivo para luego consultarlo.
-  console.error(err.stack);
+//------------------------------------
+//-- Control de errores --------------
+//------------------------------------
+const {errorHandler, _404Handler} = require("./error-handler/errorhandler");
+app.use(errorHandler);
+app.use(_404Handler);
 
-  dato = new Date().toLocaleString() + "\n" + err.stack + "\n" + "\n";
-  await fs.writeFile("./log.txt", dato, { flag: "a" });
-  //const logFile = fs.readFile("log.txt",'utf-8');
-
-  //enviamos al usuario un mensaje apropiado, sin dar detalles del error
-  res
-    .status(500)
-    .send(
-      "Actualmente tenemos inconvenientes con procesar su solicitud, intente nuevamente mas tarde!"
-    );
-});
-
-// captura toda las peticiones que no han sido capturadas anteriormente
-app.use(function (req, res) {
-  res.status(404).send("Pagina no encontrada!");
-});
 
 //------------------------------------
 //-- INICIO ---------------------------
 //------------------------------------
+if (process.env.NODE_ENV != 'test') {
+
 const port = process.env.PORT || 3000;
 app.listen(port, () => {
   console.log(`sitio escuchando en el puerto ${port}`);
 });
+
+}
+
+module.exports = app;  // para testing
